@@ -6,7 +6,8 @@
 
 === Firefox improvements
 
-* remove :waitTime option and try to handle better firefox startup (Jarmo Pertman)
+* removed dependency for ActiveSupport, making it possible to use FireWatir with Rails 3 (Jarmo Pertman)
+* removed :waitTime option and try to handle better firefox startup (Jarmo Pertman)
 
 == Version 1.7.1 - 2011/01/10
 
